welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:20: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^SlugHunting:22: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^